--- a/WinAuth/packages.WinAuth.config
+++ b/WinAuth/packages.WinAuth.config
@@ -1,11 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BouncyCastle" version="1.7.0" targetFramework="net45" />
-  <package id="HtmlRenderer.Core" version="1.5.0.5" targetFramework="net45" />
+  <package id="BouncyCastle.Cryptography" version="2.4.0" targetFramework="net462" />
+  <package id="HtmlRenderer.Core" version="1.5.0.6" targetFramework="net462" />
   <package id="HtmlRenderer.WinForms" version="1.5.0.6" targetFramework="net45" />
-  <package id="ILMerge" version="2.14.1208" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
-  <package id="NLog" version="4.2.3" targetFramework="net45" />
-  <package id="SharpZipLib" version="0.86.0" targetFramework="net45" />
-  <package id="ZXing.Net" version="0.14.0.1" targetFramework="net45" />
+  <package id="ILRepack.Lib.MSBuild.Task" version="2.0.34.1" targetFramework="net462" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net462" />
+  <package id="NLog" version="5.3.2" targetFramework="net462" />
+  <package id="SharpZipLib" version="1.4.2" targetFramework="net462" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net462" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net462" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net462" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net462" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net462" />
+  <package id="ZXing.Net" version="0.16.9" targetFramework="net462" />
 </packages>
